--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ layout: default
 
 {% include awards.html %}
 
+{% include volunteerexperiences.html %}
+
 {% include projects.html %}
 
 {% include publications.html %}
