Updated Other Projects Field

--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@
                   <li>Alex, Remote Sensing Robot</li>
                   <li>Bengkala Social, Balinese Village Website Development</li>
                   <li>Project Sarimbun, $25,000 reforestation project</li>
+                  <li>Dungeon_Crawl, 2D_Unity Game built within 19hrs during Hackathon</li>
                 </ul>
                 <a href="https://github.com/patwaririshab/FPGA-Audio-Visualiser.git">Click here to checkout my Github</a>
               </br>
