Fixed pdf resume link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/patwaririshab.png" alt="Image"/></a></div>
           <div class="h2 title">Rishab Patwari</div>
-          <p class="category text-white">Computer Engineering, Yr 2</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact Me</a><a class="btn btn-primary" href="https://patwaririshab.github.io/resume/Rishab_Patwari_Resume.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download PDF</a>
+          <p class="category text-white">Computer Engineering, Yr 2</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact Me</a><a class="btn btn-primary" href="./resume/Rishab_Patwari_Resume.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download PDF</a>
         </div>
       </div>
       <div class="section">
