Updated About Text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="h4 mt-0 title">About</div>
             <p>Hi! I am Rishab Patwari, a second year Computer Engineeering student at the National University of Singapore. I am passionate about
               solving complex engineering problems with user considerations. It gives me great joy when code which is clean, efficient and intuitive
-              gives rise to a beautiful application which works seamlessly to provide users with a pleasant user experience.
+              leads to an application which works seamlessly and provides a pleasant user experience.
             </p>
             <h6>What I am good at</h6>
             <p>
