Updated About message

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             </p>
 
             <h6>What I'm looking for</h6>
-            <p>I am currently looking for roles related to frontend,backend mobile or desktop application development although I am open
-              to exploring other development related roles.
+            <p>I am currently looking for roles related to full stack mobile or desktop application development although I am open to exploring related roles.
+              Apart from software, I am also interested in embedded systems and microcontrollers and am open to opportunities in these domains.
             </p>
           </div>
         </div>
