--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#experiences">Experiences</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Highlights</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#projecthighlights">Projects</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experiences</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#others">Others</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
             </div>
@@ -70,7 +71,7 @@
             </p>
             <h6>What I am good at</h6>
             <p>
-              I have had the most exposure to backend software development and am comfortable with Java and C++ implementations. I truly enjoy watching my
+              I have had the most exposure to frontend software development and am comfortable with Java and C++ implementations. I truly enjoy watching my
               vision coming to life after hours of coding. I have had recent experience with website development, Android Mobile App development and
               Java desktop app development. 
             </p>
@@ -111,6 +112,38 @@
   </div>
 </div>
 
+<div class="section" id="experiences">
+  <div class="container cc-experience">
+    <div class="h4 text-center mb-4 title">Experiences</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>Jan 2020 - Mar 2020</p>
+            <div class="h">Internship | 3 Months</div>
+            <img src="images/vida_logo.svg" style="margin-top: 40px; background-color: #ffffff50;padding: 10px;"></img>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">iOS Developer Intern</div>
+            <p class="category">Vida Health</p>
+            <p>Joined Vida for the role of an iOS Developer as part of the NOC Silicon Valley Program. 
+              However, due to the unprecedented Covid-19 situation, I had to termiinate and return back to Singapore early</p>
+            <h>Key Highlights:</h>  
+            <ul>
+                <li>Learnt how to use MVVM pattern, familiarised with Xcode Interface</li>
+                <li>Exposed to Reactive Swift Programming</li>
+                <li>Using Swift and Objective-C, developed product features in the mobile app</li>
+              </ul>
+              <!-- <a href="#">Click here to view my Scouting Portfolio</a> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="section" id="education">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Education</div>
@@ -120,14 +153,14 @@
           <div class="card-body cc-education-header">
             <p>2018 - Present</p>
             <div class="h5">Bachelor's Degree</div>
-            <img src="images/nuslogo.png" style="margin-top: 20px; background-color:#f5f5f595; padding: 10px;"></img>
+            <img src="images/nuslogo.png" style="margin-top: 20px; background-color:#ffffff50; padding: 10px;"></img>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">B.Eng Computer Engineering, 2nd Major in Innovation & Design</div>
             <p class="category">National University of Singapore</p>
-            <p>Current Cumulative Average Point (CAP): 4.15/5.00
+            <p>Current Cumulative Average Point (CAP): 4.26/5.00
             </br>
             Expected Date of Graduation: July 2023
             </p>
@@ -149,9 +182,32 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
+            <p>2020 - Present</p>
+            <div class="h5">NOC</div>
+            <img src="images/noclogo.png" style="margin-top: 20px; background-color:#ffffff50; padding: 10px; width: 60%; height: 60%; margin-top: 15px"></img>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">NUS Overseas Colleges</div>
+            <p class="category">NOC Silicon Valley, Batch 37</p>
+            <p> Year long entrepreneurship development program, where students intern at a startup in Silicon Valley for a year while take entrepreneurship related courses at Stanford University </p>
+            
+            <div style="flex-direction: row;">
+              <img src="images/stanford-emblem.png" style="display: block; margin-left: auto; margin-right: auto; width: 10%; height: 10%; margin-top: 15px"></img>
+              <p style="text-align: center; margin-top: 10px;"> Took the MS&E 271 Global Entrepreneurial Marketing Course at Stanford University </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
             <p>2014 - 2015</p>
             <div class="h5">Junior College</div>
-            <img src="images/sji-logo.png" style="margin-top: 15px; height:60%; width: 60%"></img>
+              <img src="images/sji-logo.png" style="margin-top: 15px; height:40%; width: 40%"></img>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -206,7 +262,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Git, Github</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div><span class="progress-value">95%</span>
               </div>
             </div>
           </div>
@@ -507,9 +563,9 @@
 
 
 
-<div class="section" id="experience">
+<div class="section" id="others">
   <div class="container cc-experience">
-    <div class="h4 text-center mb-4 title">Experiences</div>
+    <div class="h4 text-center mb-4 title">Others</div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
